add file stucture

--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,16 @@
-654
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>ToDoList</title>
+    <link rel="stylesheet" type="text/css" href="assets/CSS/Style.css">
+    <script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js"></script>
+</head>
+<body>
+    
+
+    <script type="text/javascript" src="assets/js/Script.js"></script>
+</body>
+</html>
