--- a/Index.html
+++ b/Index.html
@@ -11,6 +11,6 @@
 <body>
     
 
-    <script type="text/javascript" src="assets/js/Script.js"></script>
+    <script type="text/javascript" src="assets/js/script.js"></script>
 </body>
 </html>
