Add JQuery Code

--- a/Index.html
+++ b/Index.html
@@ -5,10 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ToDoList</title>
-    <link rel="stylesheet" type="text/css" href="assets/CSS/Style.css">
+    <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
     <script type="text/javascript" src="assets/js/lib/jquery-3.4.1.min.js"></script>
 </head>
 <body>
+    <div id="container">
+        <h1>To-Do List</h1>
+        <input type="text">
+
+        <ul>
+            <li><span>x</span> Program</li>
+            <li><span>x</span> up</li>
+            <li><span>x</span> Breakfast</li>
+        </ul>
+    </div>
+        
     
 
     <script type="text/javascript" src="assets/js/script.js"></script>
